2006-02-01  Raja R Harinath  <rharinath@novell.com>

	* typemanager.cs (cons_param_array_attribute): Make private.
	(Reset): Set it to null.
	(InitCoreHelpers): Don't initialize it.
	(ConsParamArrayAttribute): New.  Initialize it as needed.
	* parameter.cs (ParamsParameter.ApplyAttribute): Update to change.

2006-01-31  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: There might be errors reported during the
	selection of applicable methods.  If there are errors, do not
	continue execution as it will lead the compiler to crash.

2006-01-30  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: Member access is not allowed on anonymous
	methods.  Fixes #77402.

2006-01-30  Raja R Harinath  <rharinath@novell.com>

	Fix #77401
	* cs-parser.jay (VariableDeclaration): Don't set
	current_array_type to null.
	(field_declaration, event_declaration, declaration_statement):
	Set it to null here.

2006-01-29  Raja R Harinath  <harinath@gmail.com>

	Fix part of #77397
	* generic.cs (TypeManager.IsEqual): Handle pass-by-ref types.

2006-01-28  Raja R Harinath  <harinath@gmail.com>

	* typemanager.cs (GenericParameterPosition): New.
	* doc.cs: Use it.

2006-01-28  Atsushi Enomoto  <atsushi@ximian.com>

	* doc.cs : To process "include" elements, first we should create
	  another list than XmlNodeList, because it could result in node
	  removal, which could result in that the XmlNodeList gives up
	  yielding next node.

2006-01-25  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: Introduce an error report that we were not
	catching before.   Gonzalo ran into it.

2006-01-23  Miguel de Icaza  <miguel@novell.com>

	A fix for bug: #76957
	
	* iterators.cs (MoveNextMethod.CreateMethodHost): call
	ComputeMethodHost before creating the method, this is a new
	requirement. 

	* anonymous.cs (AnonymousContainer): Now we track all the scopes
	that this method references (RegisterScope).  The actual scope
	where the method is hosted is computed with the ComputeMethodHost