@@ -1313,7 +1313,7 @@ namespace Mono.CSharp {
 			// FIXME: Does this belong inside SRE.AssemblyBuilder instead?
 			if (OptAttributes == null || !OptAttributes.Contains (TypeManager.runtime_compatibility_attr_type, null)) {
 				if (RootContext.StdLib) {
-					ConstructorInfo ci = TypeManager.runtime_compatibility_attr_type.GetConstructor (TypeManager.NoTypes);
+					ConstructorInfo ci = TypeManager.runtime_compatibility_attr_type.GetConstructor (Type.EmptyTypes);
 					PropertyInfo pi = TypeManager.runtime_compatibility_attr_type.GetProperty ("WrapNonExceptionThrows");
 					Builder.SetCustomAttribute (new CustomAttributeBuilder (ci, new object [0], 
 						new PropertyInfo [] { pi }, new object[] { true } ));
